Fix overflow on matrix build / nested parallel

--- a/src/main/frontend/pipeline-console-view/pipeline-console/main/split-view.scss
+++ b/src/main/frontend/pipeline-console-view/pipeline-console/main/split-view.scss
@@ -13,7 +13,12 @@
 
 .pgv-split-view__side-panel {
   position: relative;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+
+  &--vertical {
+    display: grid;
+  }
 }
 
 .pgv-split-view__divider {
